<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pomelo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_paste">Paste</string>
    <string name="action_share">Share</string>
    <string name="action_rename">Rename</string>
    <string name="action_copy">Copy</string>
    <string name="action_cut">Cut</string>
    <string name="action_delete">Delete</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>

    <string name="choose_task">Choose task</string>

    <string name="rename">Rename</string>
    <string name="rename_failed">Failed to rename</string>
    <string name="rename_success">Successfully renamed</string>
    <string name="rename_dupd_found">Failed to rename - another folder with same name is present</string>
    <string name="rename_dupf_found">Failed to rename - another file with same name is present</string>

    <string name="delete">Delete</string>
    <string name="delete_confirm">Do you want to delete the file(s)? </string>
    <string name="delete_failed">Failed to delete</string>
    <string name="delete_success">Successfully deleted</string>

    <string name="paste_desthassrc">Destination folder already contains the copied item</string>
    <string name="shared_with">Shared with,</string>
    <string name="upload_status">Upload Status</string>
    <string name="status">Status</string>
    <string name="status_uploading">Uploading…</string>
    <string name="status_syncing">Syncing…</string>
    <string name="status_synced">In sync</string>
</resources>
