<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_share"
        android:title="@string/action_paste"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="always" />

    <item android:id="@+id/action_copy"
        android:title="@string/action_copy"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_copy"
        android:showAsAction="always" />

    <item android:id="@+id/action_cut"
        android:title="@string/action_cut"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_cut"
        android:showAsAction="always" />

    <item android:id="@+id/action_rename"
        android:title="@string/action_rename"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="always" />

    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_discard"
        android:showAsAction="ifRoom" />

</menu>